--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     </div>
 
     <div id="main" role="main" class="container">
-      {% include posts.html %}
+      <!-- {% include posts.html %} -->
       {{ content }}
     </div>
 
